[gd_scene load_steps=20 format=3 uid="uid://cvsdi7xuge6yi"]

[ext_resource type="Script" uid="uid://7b8gapqb0eyc" path="res://Scripts/cooking.gd" id="1_3ucsr"]
[ext_resource type="Texture2D" uid="uid://c64b3d10bndq" path="res://Assets/Backgrounds/KitchenBackground.png" id="2_3ucsr"]
[ext_resource type="PackedScene" uid="uid://cw7urlb7ynrdp" path="res://Scenes/basket.tscn" id="2_jba1e"]
[ext_resource type="Texture2D" uid="uid://byt5ne3jiimps" path="res://Image/Plate.png" id="3_sxt81"]
[ext_resource type="Texture2D" uid="uid://dpulcwjouagh2" path="res://Image/BreadLoaf.png" id="4_atedy"]
[ext_resource type="Texture2D" uid="uid://cdkeoeec325cj" path="res://Image/Toast_2.png" id="5_3ucsr"]
[ext_resource type="PackedScene" uid="uid://c86c31vii2j6g" path="res://Scenes/toast.tscn" id="5_jba1e"]
[ext_resource type="Texture2D" uid="uid://uvctji8xtcmy" path="res://Image/Cheese.png" id="6_s8y7v"]
[ext_resource type="PackedScene" uid="uid://jopy6vykvuc3" path="res://Scenes/cheese.tscn" id="8_3ucsr"]
[ext_resource type="Texture2D" uid="uid://5x6m1nx5i1te" path="res://Image/Lettuce_1.png" id="8_ynlyi"]
[ext_resource type="PackedScene" uid="uid://b3mpfwm1p5prw" path="res://Scenes/lettuce.tscn" id="10_3ucsr"]
[ext_resource type="Texture2D" uid="uid://cuasl7lev7f84" path="res://Image/Tomato.png" id="10_tyq45"]
[ext_resource type="PackedScene" uid="uid://dgrrx5e6q483p" path="res://Scenes/tomatoes.tscn" id="12_3ucsr"]
[ext_resource type="Texture2D" uid="uid://b184hlbftn1s6" path="res://Assets/Various/menu_box.png" id="13_nrac7"]
[ext_resource type="Texture2D" uid="uid://cimp3y4ohirfl" path="res://Assets/Buttons/continue_b.svg" id="15_s8y7v"]
[ext_resource type="FontFile" uid="uid://dvo7fxla4t821" path="res://Assets/Fonts/Coming_Soon/ComingSoon-Regular.ttf" id="15_tyq45"]
[ext_resource type="Texture2D" uid="uid://digbqxmhhjcoa" path="res://Assets/Buttons/exit_b.svg" id="16_ynlyi"]
[ext_resource type="Texture2D" uid="uid://icp0vm0mi3k8" path="res://Assets/Buttons/exit_b_pressed.svg" id="17_nrac7"]
[ext_resource type="VideoStream" uid="uid://q3w6s7goctyx" path="res://Assets/Videos/Confetti.ogv" id="19_tyq45"]

[node name="Cooking" type="Node2D"]
script = ExtResource("1_3ucsr")

[node name="Background" type="TextureRect" parent="."]
z_index = -6
offset_left = -8.0
offset_top = -8.0
offset_right = 1288.0
offset_bottom = 808.0
texture = ExtResource("2_3ucsr")
expand_mode = 1

[node name="BasketScene" parent="." instance=ExtResource("2_jba1e")]
position = Vector2(856, 464)
scale = Vector2(0.25, 0.25)

[node name="Plate3" type="Sprite2D" parent="."]
position = Vector2(705.2, 645.7)
scale = Vector2(0.409375, 0.368359)
texture = ExtResource("3_sxt81")

[node name="Toast1" type="Sprite2D" parent="Plate3"]
position = Vector2(-29.313, -134.38)
rotation = 3.14159
scale = Vector2(0.641221, -0.712619)
texture = ExtResource("4_atedy")

[node name="Toast2" parent="." instance=ExtResource("5_jba1e")]
position = Vector2(688, 552)
rotation = 0.120428
scale = Vector2(0.25, 0.25)

[node name="Plate4" type="Sprite2D" parent="."]
position = Vector2(864, 672)
scale = Vector2(0.36, 0.324)
texture = ExtResource("3_sxt81")

[node name="Cheese1" type="Sprite2D" parent="Plate4"]
position = Vector2(-58.626, -108.59)
scale = Vector2(0.45, 0.45)
skew = -0.174533
texture = ExtResource("6_s8y7v")

[node name="Cheese2" parent="." instance=ExtResource("8_3ucsr")]
position = Vector2(840, 608)
scale = Vector2(0.25, 0.25)

[node name="Plate1" type="Sprite2D" parent="."]
position = Vector2(400, 624)
scale = Vector2(0.45, 0.45)
texture = ExtResource("3_sxt81")

[node name="Lettuce1" type="Sprite2D" parent="Plate1"]
position = Vector2(-88.8889, -124.444)
scale = Vector2(0.55, 0.55)
texture = ExtResource("8_ynlyi")

[node name="Lettuce2" parent="." instance=ExtResource("10_3ucsr")]
position = Vector2(432, 496)
rotation = 0.958186
scale = Vector2(0.35, 0.35)

[node name="Plate2" type="Sprite2D" parent="."]
position = Vector2(542, 666)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_sxt81")

[node name="Tomatoes1" type="Sprite2D" parent="Plate2"]
position = Vector2(-55.4285, -132.572)
scale = Vector2(0.642857, 0.642857)
texture = ExtResource("10_tyq45")

[node name="Tomatoes2" parent="." instance=ExtResource("12_3ucsr")]
position = Vector2(568, 592)
rotation = 0.958186
scale = Vector2(0.19, 0.19)

[node name="Square" type="Sprite2D" parent="."]
position = Vector2(151.425, 135.425)
scale = Vector2(0.335864, 0.335864)
texture = ExtResource("13_nrac7")

[node name="ToastMenu" type="Sprite2D" parent="Square"]
position = Vector2(-215.638, -165.022)
scale = Vector2(0.279131, 0.279131)
texture = ExtResource("5_3ucsr")

[node name="CheeseMenu" type="Sprite2D" parent="Square"]
position = Vector2(120.808, -165.022)
scale = Vector2(0.279131, 0.279131)
texture = ExtResource("6_s8y7v")

[node name="TomatoMenu" type="Sprite2D" parent="Square"]
position = Vector2(-209.683, 170.923)
scale = Vector2(0.302392, 0.302392)
texture = ExtResource("10_tyq45")

[node name="LettuceMenu" type="Sprite2D" parent="Square"]
position = Vector2(126.763, 178.41)
scale = Vector2(0.25587, 0.25587)
texture = ExtResource("8_ynlyi")

[node name="ToastLabel" type="Label" parent="Square"]
offset_left = -117.384
offset_top = -221.593
offset_right = -51.3839
offset_bottom = -87.593
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_tyq45")
theme_override_font_sizes/font_size = 90
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheeseLabel" type="Label" parent="Square"]
offset_left = 216.085
offset_top = -221.593
offset_right = 282.085
offset_bottom = -87.593
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_tyq45")
theme_override_font_sizes/font_size = 90
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TomatoesLabel" type="Label" parent="Square"]
offset_left = -115.527
offset_top = 123.49
offset_right = -49.5268
offset_bottom = 257.49
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_tyq45")
theme_override_font_sizes/font_size = 90
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LettuceLabel" type="Label" parent="Square"]
offset_left = 215.731
offset_top = 124.256
offset_right = 281.731
offset_bottom = 258.256
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_tyq45")
theme_override_font_sizes/font_size = 90
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="TextureButton" parent="."]
visible = false
offset_left = 1020.0
offset_top = 664.0
offset_right = 1184.0
offset_bottom = 736.0
texture_normal = ExtResource("15_s8y7v")
stretch_mode = 0

[node name="BackToSelect" type="TextureButton" parent="."]
offset_left = 49.0
offset_top = 679.0
offset_right = 125.0
offset_bottom = 755.0
texture_normal = ExtResource("16_ynlyi")
texture_pressed = ExtResource("17_nrac7")

[node name="Confetti" type="VideoStreamPlayer" parent="."]
offset_left = 904.0
offset_top = 336.0
offset_right = 1752.0
offset_bottom = 1184.0
scale = Vector2(0.35, 0.35)
stream = ExtResource("19_tyq45")
autoplay = true

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BackToSelect" to="." method="_on_back_to_select_pressed"]
